minimal setup for the server

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ logs
 *.svg
 *.map
 
+server/src/main/resources/public
+
 frontend/src/main/resources/.sass-cache
 #frontend/src/main/resources/index.css
 frontend/src/main/resources/index.css.map
