--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,7 +5,7 @@ style = default
 runner.dialect = scala3
 
 align {
-  tokens.add = ["=", "<-", "<--"]
+  tokens.add = ["=", "<-", "<--", "->"]
 }
 maxColumn = 120
 rewrite.rules = [SortImports, RedundantBraces, RedundantParens, PreferCurlyFors]
