--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           java-version: "11"
           distribution: "adopt"
+      - name: Install npm deps
+        run: cd frontend && npm install && cd ..
       - name: Compile
         run: sbt compile
       - name: Run tests
